fix panel visibility

--- a/src/styles/panel.scss
+++ b/src/styles/panel.scss
@@ -7,7 +7,7 @@
   pointer-events: none;
 }
 
-.panel-wrapper.is-recording {
+.body--is-recording .panel-wrapper {
   opacity: 0.7;
   transition: opacity 0.15s;
   pointer-events: auto;
